# twitter-mcp

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: tests.yml
scripts/: auth_import_firefox.py  auth_login.py  smoke_real.py
src/: config.py
src/twitter_sdk/: __init__.py  auth.py  browser.py  downloader.py  hermes_tweet.py  models.py  parsers.py  scraper.py  server.py
src/twitter_sdk/endpoints/: __init__.py  _ids.py  article.py  bookmarks.py  home.py  media.py  search.py  social_graph.py  trends.py  tweet.py  user.py
tests/: test_endpoints.py  test_hermes_tweet.py  test_media.py  test_parsers.py  test_server.py
tests/fixtures/: graphql_bookmarks.json  graphql_home.json  graphql_search.json  graphql_trends.json  graphql_tweet_detail.json  graphql_tweet_thread.json  graphql_user_list.json  graphql_user_profile.json  graphql_user_tweets.json
